# mode_sorter

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  flake.nix  pyproject.toml  setup.cfg  setup.py  shell.nix  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
mode_sorter/: __init__.py  generation.py  mode_sorter.py
tests/: __init__.py  test_generation.py  test_mode_sorter.py
