[tool.poetry]
name = "mode-sorter"
version = "0.1.0"
description = "A package for generating mode sorting patterns with SLMs"
authors = ["Max Tyler <maxastyler@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19"
scipy = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
